<resources>
    <string name="app_name">Need</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="viewpager_need">Need</string>
    <string name="viewpager_world">世间</string>
    <string name="viewpager_worker">行家</string>
    <string name="viewpager_mine">用户名</string>

    <string name="cost">$95.00</string>
    <string name="notice">(本产品暂不支持港澳台、西藏地区配送)</string>
    <string name="contents">富含珍贵的蜗牛蛋白，并以一系列植物提取物。如果您在使用时搭配同系列水乳，将会有更加出色的效果，可以为您铸造
        肌肤的水润。</string>

</resources>
