<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/main_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/main_top_bar_height"
        android:layout_alignParentTop="true"
        layout="@layout/activity_main_bar" >
    </include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_top_bar"
        android:layout_marginBottom="@dimen/viewpager_height">

        <android.support.v4.view.ViewPager
            android:id="@+id/main_viewpager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/viewpager_height"
        android:id="@+id/viewpager_layout"
        android:background="#6453"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewpager_need"
            android:text="@string/viewpager_need"
            android:src="@mipmap/zhu1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewpager_world"
            android:text="@string/viewpager_world"
            android:src="@mipmap/zhu2"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewpager_worker"
            android:text="@string/viewpager_worker"
            android:src="@mipmap/zhu3"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewpager_mine"
            android:text="@string/viewpager_mine"
            android:src="@mipmap/zhu4"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
